# app/models/user.go
@@ -6,7 +6,10 @@ import (
 
 type User struct {
 	orm.Model
-	Name     string
-	Email    string
-	Password string
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	IsActive bool   `json:"is_active"`
+
+	Posts []*Post `json:"posts" gorm:"foreignKey:UserId"`
 }
